Fixed horizontal scroll and adjust hover button color

--- a/styles.css
+++ b/styles.css
@@ -1136,9 +1136,9 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
+  position: relative;
   width: 100%;
-  top: 252rem;
+  top: 72rem;
   height: 44rem;
   background-image: url(image/contact\ form\ shapes-mobile.png);
   background-color: #396df2;
@@ -1286,12 +1286,12 @@ h1 {
 
 .btn:hover {
   text-decoration-line: underline;
-  background-color: #789bf2;
+  background-color: #6070ff;
 }
 
 .btn:active {
   opacity: 1;
-  color: #fff;
+  color: #5E6C84;
 }
 
 .btn:focus {
